Revert "some changes"
This reverts commit 56ebc9d62abebaefc337b1c343663927d5fcc2c0.

# Conflicts:
#	.vscode/launch.json
#	.vscode/tasks.json

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,9 @@
 *.app
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+/.vscode/*
+/.history/*
+/.vscode/settings.json
+/.vscode/tasks.json
+/.vscode/launch.json
+/.vscode/extensions.json
